# blockbuilders.tech

./: .gitignore  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.bmad-core/: install-manifest.yaml
.codex/: auth.json  config.toml  history.jsonl  version.json
.github/workflows/: monorepo-ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  (+2 more)
apps/api/: package.json  pyproject.toml
apps/api/blockbuilders_api/: __init__.py  main.py
apps/api/blockbuilders_api/core/: config.py
apps/api/blockbuilders_api/dependencies/: auth.py
apps/api/blockbuilders_api/models/: auth.py
apps/api/blockbuilders_api/repositories/: __init__.py  compliance.py  plan_usage.py
apps/api/blockbuilders_api/routers/: __init__.py  auth.py  plan_usage.py  strategies.py
apps/api/blockbuilders_api/schemas/: __init__.py  auth.py
apps/api/blockbuilders_api/services/: audit.py  datadog.py  notifications.py  plan_usage.py  supabase.py  workspace.py
apps/api/docs/ops/: audit-log-sample.csv
apps/api/migrations/: 0001_add_simulation_consent.sql
apps/api/tests/: __init__.py  conftest.py  test_audit.py  test_auth.py  test_plan_usage.py  test_supabase_service.py
apps/api/tests/utils/: datadog_sink.py
apps/workers/: package.json  pyproject.toml
apps/workers/blockbuilders_workers/: __init__.py  celery_app.py
apps/workers/tests/: test_celery_app.py
docs/: architecture.md  brief.md  dev-nogo.md  front-end-spec.md  po-master-checklist-report.md  prd.md
scripts/: mock_datadog_agent.py
(+69 files in other folders)
