[tool.poetry]
name = "blockbuilders-api"
version = "0.1.0"
description = "FastAPI gateway for the BlockBuilders platform"
authors = ["BlockBuilders Engineering <engineering@blockbuilders.tech>"]
packages = [{ include = "blockbuilders_api" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
blockbuilders-shared = { path = "../../packages/shared/python", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
